--- a/src/App.css
+++ b/src/App.css
@@ -140,11 +140,14 @@
 
 /* Custom styles for the header background */
 .header-bg {
-  background-image: url("./Images/background.png"); /* Replace with the actual image path */
+  /* background-image: url("./Images/background.png"); Replace with the actual image path */
   background-size: cover; /* Ensures the image covers the whole area */
   background-position: center; /* Centers the image */
   height: 90vh;
   color: rgb(255, 255, 255);
+  position: relative;
+ 
+  
 }
 
 .image-signature {
@@ -168,11 +171,11 @@
   display: flex;
   position: absolute;
   top: 50%;
-  left: 50%;
+  left: 37%;
   transform: translate(-50%, -50%);
 
   position: relative;
-  top: 50px;
+  top: 27px;
 }
 
 .custom-icons li {
@@ -247,7 +250,7 @@
 /* 
 Contsctus Form */
 
-.form-fields {
+/* .form-fields {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -298,7 +301,7 @@ Contsctus Form */
 
 .item-card {
   width: calc(33.33% - 10px);
-}
+} */
 
 
 
