--- a/src/Components/Education/Education.css
+++ b/src/Components/Education/Education.css
@@ -25,22 +25,16 @@
     height: 45%;
   }
   
-  .card-header h3 {
-    margin: 0;
-    font-size: 22px;
-    font-weight: bold;
-    color: #2b2d42;
-  }
-  
+
   .institution-name {
     font-size: 16px;
     color: #8d99ae;
   }
   
-  .card-body {
+  /* .card-body {
     font-size: 14px;
     color: #333;
-  }
+  } */
   
   .card-body p {
     margin-bottom: 10px;
