--- a/src/Components/Experience/Experience.css
+++ b/src/Components/Experience/Experience.css
@@ -1,4 +1,4 @@
-
+/* 
 
 .experience-container {
     display: flex;
@@ -16,6 +16,7 @@
     transform: translateY(0);
     opacity: 0;
     animation: fadeInUp 0.8s forwards;
+    height: 378px;
   }
   
   .experience-card:nth-child(1) {
@@ -37,8 +38,10 @@
     background-color: #2b2d42;
     color: #fff;
     padding: 15px;
-    border-bottom: 2px solid #8d99ae;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
   }
   
   .card-header h3 {
@@ -56,7 +59,7 @@
   }
   
   .card-body p {
-    margin: 10px 0;
+    margin: 1px 10px 10px 10px;
     font-size: 14px;
     color: #333;
   }
@@ -64,4 +67,78 @@
   .card-body strong {
     color: #2b2d42;
   }
-  
+   */
+
+
+
+
+
+
+   .unique-experience-container {
+    display: flex;
+    gap: 20px;
+    justify-content: space-evenly;
+    padding: 40px 0;
+}
+
+.unique-experience-card {
+    width: 300px;
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    transform: translateY(0);
+    opacity: 0;
+    animation: unique-fadeInUp 0.8s forwards;
+    height: 335px;
+}
+
+.unique-experience-card:nth-child(1) {
+    animation-delay: 0.2s;
+}
+
+.unique-experience-card:nth-child(2) {
+    animation-delay: 0.4s;
+}
+
+@keyframes unique-fadeInUp {
+    to {
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
+
+.unique-card-header {
+    background-color: #2b2d42;
+    color: #fff;
+    padding: 15px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 32%;
+}
+
+.unique-card-header h3 {
+    margin: 0;
+    font-size: 20px;
+}
+
+.unique-company-name {
+    font-size: 14px;
+    font-weight: 300;
+}
+
+.unique-card-body {
+    padding: 15px;
+}
+
+.unique-card-body p {
+    margin: 1px 10px 10px 10px;
+    font-size: 14px;
+    color: #333;
+}
+
+.unique-card-body strong {
+    color: #2b2d42;
+}
