--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -4,6 +4,8 @@
     padding: 0;
   } */
   
+
+
  .text-container{
     display: flex;
     align-items: center;
@@ -18,15 +20,21 @@
     padding: 0;
 
   }
-  
+  .container-fluid{
+    background-color: #333;
+  }
   .text-container {
-    position: relative;
+    position: absolute;
     padding: 2rem;
-   
+   top: 11rem;
     border-radius: 10px;
     /* box-shadow: 0 8px 32px rgba(31, 38, 135, 0.15); */
     transition: transform 0.3s ease;
-    margin-top: 10rem;
+  
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    align-items: flex-start;
   }
   
   .text-container:hover {
@@ -34,7 +42,7 @@
   }
   
   h1 {
-    color: #2c3e50;
+    color: #ffffff;
     font-size: 3rem;
     font-weight: 300;
     line-height: 1.5;
@@ -54,12 +62,12 @@
   }
   
   h1 span.prefix:hover {
-    color: #7c5ce0;
+    color: #9210b9;
   }
   
   .message {
     /* background: linear-gradient(45deg, #a8d8ea, #aa96da); */
-    color: #000;
+    color: #ffffff;
     display: block;
     font-weight: 700;
     position: absolute;
@@ -70,13 +78,13 @@
     animation: openclose 8s ease-in-out infinite;
     height: 4.5rem;
     cursor: pointer;
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    /* transition: transform 0.3s ease, box-shadow 0.3s ease; */
   }
   
-  .message:hover {
+  /* .message:hover {
     transform: scale(1.02);
     box-shadow: 0 5px 15px rgba(0,0,0,0.1);
-  }
+  } */
   
   .word1, .word2, .word3, .word4 {
     font-family: tahoma;
@@ -145,4 +153,74 @@
   .image-contain{
     width: 20rem;
     height: 20rem;
+    position: absolute;
+    right: 11rem;
+    top: 14rem;
   }
+
+ .my-name{
+    margin-left: 2rem;
+  }
+
+ .description-title{
+  margin-left: 2rem;
+}
+
+
+
+
+
+
+
+@import url('https://fonts.googleapis.com/css?family=Lato:100&display=swap');
+
+
+
+.download {
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 25%;
+  margin-left: 7rem;
+  margin-top: 2rem;
+
+  display: flex;
+  margin-left: 19rem;
+}
+
+
+.btn {
+  width: 180px;
+  height: 60px;
+  cursor: pointer;
+  background: transparent;
+  border: 1px solid #91C9FF;
+  outline: none;
+  transition: 1s ease-in-out;
+}
+
+svg {
+  position: absolute;
+  left: 0;
+  top: 0;
+  fill: none;
+  stroke: #fff;
+  stroke-dasharray: 150 480;
+  stroke-dashoffset: 150;
+  transition: 1s ease-in-out;
+}
+
+.btn:hover {
+  transition: 1s ease-in-out;
+  background: #4F95DA;
+}
+
+.btn:hover svg {
+  stroke-dashoffset: -480;
+}
+
+.btn span {
+  color: white;
+  font-size: 18px;
+  font-weight: 100;
+}
